Made improvements
